# api/openapi/types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package Openapi
 
+const (
+	BearerAuthScopes = "BearerAuth.Scopes"
+)
+
 // Tweet defines model for Tweet.
 type Tweet struct {
 	Id     int64   `json:"id"`
